# opengl-c-example

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh
data/shaders/: cube_fragment.glsl  cube_vertex.glsl  fragment.glsl  quad_fragment.glsl  quad_vertex.glsl  triangle_vertex.glsl  vertex.glsl
docs/: CONTRIBUTING.md
libs/glad/include/glad/: gl.h  glad.h
libs/glad/src/: glad.c
src/: main.c
src/gfx/: cube.c  cube.h  quad.c  quad.h  renderer.c  renderer.h  shader.c  shader.h  texture.c  texture.h
src/graphics/: camera.c  camera.h  cube.c  cube.h  gldebug.h  quad.c  quad.h  renderer.c  renderer.h  shader.c  shader.h  texture.c  texture.h  triangle.c  triangle.h
src/math/: mat4.c  mat4.h  math.c  math.h  quat.c  quat.h  quaternion.c  quaternion.h  vec2.c  vec2.h  vec3.c  vec3.h  vec4.c  vec4.h
src/util/: app.c  app.h  camera.c  camera.h  input.c  input.h  window.c  window.h
